--- a/index.html
+++ b/index.html
@@ -8,15 +8,48 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main">
-        <div class="head">
-            <h1>Some User</h1>
-            <div class="likesArea">
-                <p id="likes">0 like(s)</p>
-                <button class="likeBtn" onclick="liked()">Like</button>
+    <div class="container">    
+        <h2>Network</h2>
+        <h1>Your Feed</h1>
+        <div class="main">
+            <div class="user">
+                <img src="img\user-circle.png">
+                <p><a class="avatar" href="#">Add an avatar</a></p>
+                <p class="username">James Doe</p>
+            </div>
+            <div class="feed">
+                <div class="feedObj">
+                    <div class="head">
+                        <h3>Neil M</h3>
+                        <div class="likesArea">
+                            <p id="likes1">0 like(s)</p>
+                            <button class="likeBtn" onclick="liked1()">Like</button>
+                        </div>
+                    </div>
+                    <p>This is some filler text, it can say anything we like</p>
+                </div>
+                <div class="feedObj">
+                    <div class="head">
+                        <h3>Nichole K</h3>
+                        <div class="likesArea">
+                            <p id="likes2">0 like(s)</p>
+                            <button class="likeBtn" onclick="liked2()">Like</button>
+                        </div>
+                    </div>
+                    <p>This is some filler text, it can say anything we like</p>
+                </div>
+                <div class="feedObj">
+                    <div class="head">
+                        <h3>Jim R</h3>
+                        <div class="likesArea">
+                            <p id="likes3">0 like(s)</p>
+                            <button class="likeBtn" onclick="liked3()">Like</button>
+                        </div>
+                    </div>
+                    <p>This is some filler text, it can say anything we like</p>
+                </div>
             </div>
         </div>
-        <p>This is some filler text, it can say anything we like</p>
     </div>
     <script src="script.js"></script>    
 </body>
