--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <button class="likeBtn" onclick="liked1()">Like</button>
                         </div>
                     </div>
-                    <p>This is some filler text, it can say anything we like</p>
+                    <p>I just set up this new discord bot, let me know what you all think. <a href="#">link</a></p>
                 </div>
                 <div class="feedObj">
                     <div class="head">
@@ -36,7 +36,7 @@
                             <button class="likeBtn" onclick="liked2()">Like</button>
                         </div>
                     </div>
-                    <p>This is some filler text, it can say anything we like</p>
+                    <p>Just finished my <a href="#">next comic</a>, check it out.</p>
                 </div>
                 <div class="feedObj">
                     <div class="head">
@@ -46,7 +46,8 @@
                             <button class="likeBtn" onclick="liked3()">Like</button>
                         </div>
                     </div>
-                    <p>This is some filler text, it can say anything we like</p>
+                    <p>I can't stop listening to the <a href="#">new album</a>.</p>
+                    <p>Who else is liking it?</p>
                 </div>
             </div>
         </div>
